# Copyright 2016-2018 Game Server Services, Inc. or its affiliates. All Rights
# Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.

cmake_minimum_required(VERSION 3.2)
project(gs2-cpp-sdk-mission)

file(GLOB ${PROJECT_NAME}_HEADER_FILES
        Gs2Mission.hpp
        Gs2MissionConst.hpp
        Gs2MissionRestClient.hpp
        Gs2MissionWebSocketClient.hpp
        model/model.hpp
        model/MissionGroupModelMaster.hpp
        model/LogSetting.hpp
        model/Config.hpp
        model/CounterScopeModel.hpp
        model/Counter.hpp
        model/MissionTaskModelMaster.hpp
        model/CurrentMissionMaster.hpp
        model/Namespace.hpp
        model/Complete.hpp
        model/AcquireAction.hpp
        model/ResponseCache.hpp
        model/CounterModelMaster.hpp
        model/CounterModel.hpp
        model/GitHubCheckoutSetting.hpp
        model/NotificationSetting.hpp
        model/MissionGroupModel.hpp
        model/ScopedValue.hpp
        model/MissionTaskModel.hpp
        request/DescribeMissionGroupModelMastersRequest.hpp
        request/CreateMissionGroupModelMasterRequest.hpp
        request/GetMissionGroupModelMasterRequest.hpp
        request/UpdateMissionGroupModelMasterRequest.hpp
        request/DeleteMissionGroupModelMasterRequest.hpp
        request/DescribeCountersRequest.hpp
        request/DescribeCountersByUserIdRequest.hpp
        request/IncreaseCounterByUserIdRequest.hpp
        request/GetCounterRequest.hpp
        request/GetCounterByUserIdRequest.hpp
        request/DeleteCounterByUserIdRequest.hpp
        request/IncreaseByStampSheetRequest.hpp
        request/DescribeMissionTaskModelMastersRequest.hpp
        request/CreateMissionTaskModelMasterRequest.hpp
        request/GetMissionTaskModelMasterRequest.hpp
        request/UpdateMissionTaskModelMasterRequest.hpp
        request/DeleteMissionTaskModelMasterRequest.hpp
        request/ExportMasterRequest.hpp
        request/GetCurrentMissionMasterRequest.hpp
        request/UpdateCurrentMissionMasterRequest.hpp
        request/UpdateCurrentMissionMasterFromGitHubRequest.hpp
        request/DescribeNamespacesRequest.hpp
        request/CreateNamespaceRequest.hpp
        request/GetNamespaceStatusRequest.hpp
        request/GetNamespaceRequest.hpp
        request/UpdateNamespaceRequest.hpp
        request/DeleteNamespaceRequest.hpp
        request/DescribeCompletesRequest.hpp
        request/DescribeCompletesByUserIdRequest.hpp
        request/CompleteRequest.hpp
        request/CompleteByUserIdRequest.hpp
        request/ReceiveByUserIdRequest.hpp
        request/GetCompleteRequest.hpp
        request/GetCompleteByUserIdRequest.hpp
        request/DeleteCompleteByUserIdRequest.hpp
        request/ReceiveByStampTaskRequest.hpp
        request/DescribeCounterModelMastersRequest.hpp
        request/CreateCounterModelMasterRequest.hpp
        request/GetCounterModelMasterRequest.hpp
        request/UpdateCounterModelMasterRequest.hpp
        request/DeleteCounterModelMasterRequest.hpp
        request/DescribeCounterModelsRequest.hpp
        request/GetCounterModelRequest.hpp
        request/DescribeMissionGroupModelsRequest.hpp
        request/GetMissionGroupModelRequest.hpp
        request/DescribeMissionTaskModelsRequest.hpp
        request/GetMissionTaskModelRequest.hpp
        result/DescribeMissionGroupModelMastersResult.hpp
        result/CreateMissionGroupModelMasterResult.hpp
        result/GetMissionGroupModelMasterResult.hpp
        result/UpdateMissionGroupModelMasterResult.hpp
        result/DeleteMissionGroupModelMasterResult.hpp
        result/DescribeCountersResult.hpp
        result/DescribeCountersByUserIdResult.hpp
        result/IncreaseCounterByUserIdResult.hpp
        result/GetCounterResult.hpp
        result/GetCounterByUserIdResult.hpp
        result/DeleteCounterByUserIdResult.hpp
        result/IncreaseByStampSheetResult.hpp
        result/DescribeMissionTaskModelMastersResult.hpp
        result/CreateMissionTaskModelMasterResult.hpp
        result/GetMissionTaskModelMasterResult.hpp
        result/UpdateMissionTaskModelMasterResult.hpp
        result/DeleteMissionTaskModelMasterResult.hpp
        result/ExportMasterResult.hpp
        result/GetCurrentMissionMasterResult.hpp
        result/UpdateCurrentMissionMasterResult.hpp
        result/UpdateCurrentMissionMasterFromGitHubResult.hpp
        result/DescribeNamespacesResult.hpp
        result/CreateNamespaceResult.hpp
        result/GetNamespaceStatusResult.hpp
        result/GetNamespaceResult.hpp
        result/UpdateNamespaceResult.hpp
        result/DeleteNamespaceResult.hpp
        result/DescribeCompletesResult.hpp
        result/DescribeCompletesByUserIdResult.hpp
        result/CompleteResult.hpp
        result/CompleteByUserIdResult.hpp
        result/ReceiveByUserIdResult.hpp
        result/GetCompleteResult.hpp
        result/GetCompleteByUserIdResult.hpp
        result/DeleteCompleteByUserIdResult.hpp
        result/ReceiveByStampTaskResult.hpp
        result/DescribeCounterModelMastersResult.hpp
        result/CreateCounterModelMasterResult.hpp
        result/GetCounterModelMasterResult.hpp
        result/UpdateCounterModelMasterResult.hpp
        result/DeleteCounterModelMasterResult.hpp
        result/DescribeCounterModelsResult.hpp
        result/GetCounterModelResult.hpp
        result/DescribeMissionGroupModelsResult.hpp
        result/GetMissionGroupModelResult.hpp
        result/DescribeMissionTaskModelsResult.hpp
        result/GetMissionTaskModelResult.hpp
        )

file(GLOB ${PROJECT_NAME}_SOURCE_FILES
        Gs2MissionRestClient.cpp
        Gs2MissionWebSocketClient.cpp
        model/MissionGroupModelMaster.cpp
        model/LogSetting.cpp
        model/Config.cpp
        model/CounterScopeModel.cpp
        model/Counter.cpp
        model/MissionTaskModelMaster.cpp
        model/CurrentMissionMaster.cpp
        model/Namespace.cpp
        model/Complete.cpp
        model/AcquireAction.cpp
        model/ResponseCache.cpp
        model/CounterModelMaster.cpp
        model/CounterModel.cpp
        model/GitHubCheckoutSetting.cpp
        model/NotificationSetting.cpp
        model/MissionGroupModel.cpp
        model/ScopedValue.cpp
        model/MissionTaskModel.cpp
        result/DescribeMissionGroupModelMastersResult.cpp
        result/CreateMissionGroupModelMasterResult.cpp
        result/GetMissionGroupModelMasterResult.cpp
        result/UpdateMissionGroupModelMasterResult.cpp
        result/DeleteMissionGroupModelMasterResult.cpp
        result/DescribeCountersResult.cpp
        result/DescribeCountersByUserIdResult.cpp
        result/IncreaseCounterByUserIdResult.cpp
        result/GetCounterResult.cpp
        result/GetCounterByUserIdResult.cpp
        result/DeleteCounterByUserIdResult.cpp
        result/IncreaseByStampSheetResult.cpp
        result/DescribeMissionTaskModelMastersResult.cpp
        result/CreateMissionTaskModelMasterResult.cpp
        result/GetMissionTaskModelMasterResult.cpp
        result/UpdateMissionTaskModelMasterResult.cpp
        result/DeleteMissionTaskModelMasterResult.cpp
        result/ExportMasterResult.cpp
        result/GetCurrentMissionMasterResult.cpp
        result/UpdateCurrentMissionMasterResult.cpp
        result/UpdateCurrentMissionMasterFromGitHubResult.cpp
        result/DescribeNamespacesResult.cpp
        result/CreateNamespaceResult.cpp
        result/GetNamespaceStatusResult.cpp
        result/GetNamespaceResult.cpp
        result/UpdateNamespaceResult.cpp
        result/DeleteNamespaceResult.cpp
        result/DescribeCompletesResult.cpp
        result/DescribeCompletesByUserIdResult.cpp
        result/CompleteResult.cpp
        result/CompleteByUserIdResult.cpp
        result/ReceiveByUserIdResult.cpp
        result/GetCompleteResult.cpp
        result/GetCompleteByUserIdResult.cpp
        result/DeleteCompleteByUserIdResult.cpp
        result/ReceiveByStampTaskResult.cpp
        result/DescribeCounterModelMastersResult.cpp
        result/CreateCounterModelMasterResult.cpp
        result/GetCounterModelMasterResult.cpp
        result/UpdateCounterModelMasterResult.cpp
        result/DeleteCounterModelMasterResult.cpp
        result/DescribeCounterModelsResult.cpp
        result/GetCounterModelResult.cpp
        result/DescribeMissionGroupModelsResult.cpp
        result/GetMissionGroupModelResult.cpp
        result/DescribeMissionTaskModelsResult.cpp
        result/GetMissionTaskModelResult.cpp
        )

add_library(${PROJECT_NAME} STATIC
        ${${PROJECT_NAME}_SOURCE_FILES}
        )

gs2_inherit_cocos2dx_settings(${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} gs2-cpp-sdk-core)

set(GS2_ALL_LIBRARIES
        ${GS2_ALL_LIBRARIES}
        ${PROJECT_NAME}
        PARENT_SCOPE
        )